objects/Apttus_Config2__OrderSystemProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Order System Properties</description>
    <fields>
        <fullName>Apttus_Config2__AgreementFieldsForPartialOrder2__c</fullName>
        <description>Enter the list of field API names from the agreement object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <inlineHelpText>Enter the list of field API names from the agreement object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Agreement Fields For Partial Order2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AgreementFieldsForPartialOrder__c</fullName>
        <description>Enter the list of field API names from the agreement object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <inlineHelpText>Enter the list of field API names from the agreement object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Agreement Fields For Partial Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AgreementItemFieldsForPartialOrder2__c</fullName>
        <description>Enter the list of field API names from the agreement line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <inlineHelpText>Enter the list of field API names from the agreement line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Agreement Item Fields For Partial Order2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AgreementItemFieldsForPartialOrder__c</fullName>
        <description>Enter the list of field API names from the agreement line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <inlineHelpText>Enter the list of field API names from the agreement line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Agreement Item Fields For Partial Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CreateAssetOnOrderActivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether asset creation is delayed until order activation</description>
        <inlineHelpText>Indicates whether asset creation is delayed until order activation</inlineHelpText>
        <label>Create Asset On Order Activation ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableInflightChangesAndCancellation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether inflight order changes and cancellation are enabled</description>
        <inlineHelpText>Indicates whether inflight order changes and cancellation are enabled</inlineHelpText>
        <label>Enable Inflight Changes And Cancellation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__InitiateBillingOnOrderActivation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether billing should be initiated on order activation</description>
        <inlineHelpText>Indicates whether billing should be initiated on order activation</inlineHelpText>
        <label>Initiate Billing On Order Activation ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuoteFieldsForPartialOrder2__c</fullName>
        <description>Enter the list of field API names from the quote/proposal object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <inlineHelpText>Enter the list of field API names from the quote/proposal object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Quote Fields For Partial Order2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuoteFieldsForPartialOrder__c</fullName>
        <description>Enter the list of field API names from the quote/proposal object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <inlineHelpText>Enter the list of field API names from the quote/proposal object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Quote Fields For Partial Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuoteItemFieldsForPartialOrder2__c</fullName>
        <description>Enter the list of field API names from the proposal line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <inlineHelpText>Enter the list of field API names from the proposal line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Quote Item Fields For Partial Order2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuoteItemFieldsForPartialOrder__c</fullName>
        <description>Enter the list of field API names from the proposal line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</description>
        <inlineHelpText>Enter the list of field API names from the proposal line item object for display when creating partial orders. Each field may be separated by a comma or a new line.</inlineHelpText>
        <label>Quote Item Fields For Partial Order</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SplitOrderCriteriaFields__c</fullName>
        <description>The criteria fields used to split a large order</description>
        <inlineHelpText>The list of Order Line item fields used to split items added during a large order process into multiple orders. Each field API name separated by a comma or a new line.</inlineHelpText>
        <label>Split Order Criteria Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SplitOrderThreshold__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Indicates the maximum number of bundle or standalone products (i.e. line numbers) that may be added to a split order. Defaults to 100.</description>
        <inlineHelpText>Indicates the maximum number of bundle or standalone products (i.e. line numbers) that may be added to a split order. Defaults to 100.</inlineHelpText>
        <label>Split Order Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order System Properties</label>
</CustomObject>